Fix name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nngmregistrationformR",
+  "name": "de.uk-koeln.nngm.registrationform",
   "version": "0.1.0",
   "description": "Put a description here",
   "author": null,
